--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+#docker stack deploy -c docker-compose.yml trajano
 version: '3.4'
 services:
 #  web:
@@ -127,7 +128,7 @@ volumes:
     name: 'noriko/s/letsencrypt'
     driver: cifs
     driver_opts:
-      cifsopts: vers=3.02,file_mode=0666,dir_mode=0777
+      cifsopts: vers=3.02,file_mode=0666,dir_mode=0777,mfsymlinks
 # docker volume create -d cifs --name noriko/s/wpdb --opt cifsopts=vers=3.02,file_mode=0666,dir_mode=0777
 # docker volume create -d cifs --name noriko/s/www --opt cifsopts=vers=3.02,file_mode=0666,dir_mode=0777
 #volumes:
