--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:alpine
-RUN apk add py-urllib3 certbot --no-cache --repository http://dl-3.alpinelinux.org/alpine/v3.7/community/  --repository http://dl-3.alpinelinux.org/alpine/v3.7/main/ \
+RUN apk add py-urllib3 openssl certbot --no-cache --repository http://dl-3.alpinelinux.org/alpine/v3.7/community/  --repository http://dl-3.alpinelinux.org/alpine/v3.7/main/ \
   && rm -rf /var/cache/apk/*
 # --repository http://dl-3.alpinelinux.org/alpine/3.7/community/
 #FROM linuxserver/letsencrypt:latest
