--- a/web/conf.d/trajano.net.conf
+++ b/web/conf.d/trajano.net.conf
@@ -7,3 +7,25 @@ server {
 	server_name www.trajano.net;
 	return 301 https://trajano.net$request_uri;
 }
+map $upstream_http_docker_distribution_api_version $docker_distribution_api_version {
+	'' 'registry/2.0';
+}
+server {
+	server_name trajano.net;
+	location /v2/ {
+		if ($http_user_agent ~ "^(docker\/1\.(3|4|5(?!\.[0-9]-dev))|Go ).*$" ) {
+        	return 404;
+	    }
+		auth_basic "Registry realm";
+      	auth_basic_user_file /etc/nginx/conf.d/nginx.htpasswd;
+		add_header 'Docker-Distribution-Api-Version' 'registry/2.0' always;
+
+		proxy_pass                          http://registry:5000;
+		proxy_set_header  Host              $http_host;   # required for docker client's sake
+		proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
+		proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
+		proxy_set_header  X-Forwarded-Proto $scheme;
+		proxy_read_timeout                  900;
+	}
+
+}
