--- a/web/conf.d/trajano.net.conf
+++ b/web/conf.d/trajano.net.conf
@@ -7,11 +7,10 @@ server {
 	server_name www.trajano.net;
 	return 301 https://trajano.net$request_uri;
 }
-map $upstream_http_docker_distribution_api_version $docker_distribution_api_version {
-	'' 'registry/2.0';
-}
 server {
 	server_name trajano.net;
+    listen 443 ssl http2;
+
 	location /v2/ {
 		if ($http_user_agent ~ "^(docker\/1\.(3|4|5(?!\.[0-9]-dev))|Go ).*$" ) {
         	return 404;
