--- a/web/conf.d/trajano.net.conf
+++ b/web/conf.d/trajano.net.conf
@@ -18,7 +18,7 @@ server {
 		auth_basic "Registry realm";
       	auth_basic_user_file /etc/nginx/conf.d/nginx.htpasswd;
 		add_header 'Docker-Distribution-Api-Version' 'registry/2.0' always;
-
+		client_max_body_size 300M;
 		proxy_pass                          http://registry:5000;
 		proxy_set_header  Host              $http_host;   # required for docker client's sake
 		proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
