--- a/web/conf.d/trajano.net.conf
+++ b/web/conf.d/trajano.net.conf
@@ -27,4 +27,8 @@ server {
 		proxy_read_timeout                  900;
 	}
 
+	location / {
+		proxy_pass                          http://portfolio;
+	}
+
 }
