--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -1,5 +1,6 @@
 #FROM wordpress:php7.0-fpm-alpine
 #FROM wordpress:php7.1-apache
-FROM php:apache
-ENV APACHE_DOCUMENT_ROOT /www
-VOLUME /www
+#FROM php:apache
+FROM boxedcode/alpine-nginx-php-fpm
+#ENV APACHE_DOCUMENT_ROOT /www
+#VOLUME /www
