--- a/web/conf.d/trajano.net.conf
+++ b/web/conf.d/trajano.net.conf
@@ -8,6 +8,11 @@ server {
 	return 301 https://trajano.net$request_uri;
 }
 server {
+    listen 443 ssl http2;
+	server_name www.trajano.net;
+	return 301 https://trajano.net$request_uri;
+}
+server {
 	server_name trajano.net;
     listen 443 ssl http2;
 
@@ -18,7 +23,7 @@ server {
 		auth_basic "Registry realm";
       	auth_basic_user_file /etc/nginx/conf.d/nginx.htpasswd;
 		add_header 'Docker-Distribution-Api-Version' 'registry/2.0' always;
-		client_max_body_size 300M;
+		client_max_body_size 500M;
 		proxy_pass                          http://registry:5000;
 		proxy_set_header  Host              $http_host;   # required for docker client's sake
 		proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
