--- a/web/conf.d/trajano.net.conf
+++ b/web/conf.d/trajano.net.conf
@@ -4,6 +4,11 @@ server {
 }
 server {
 	listen 80;
+	server_name trajano.net;
+	return 301 https://$host$request_uri;
+}
+server {
+	listen 80;
 	server_name www.trajano.net;
 	return 301 https://trajano.net$request_uri;
 }
@@ -23,7 +28,7 @@ server {
 		auth_basic "Registry realm";
       	auth_basic_user_file /etc/nginx/conf.d/nginx.htpasswd;
 		add_header 'Docker-Distribution-Api-Version' 'registry/2.0' always;
-		client_max_body_size 500M;
+		client_max_body_size 600M;
 		proxy_pass                          http://registry:5000;
 		proxy_set_header  Host              $http_host;   # required for docker client's sake
 		proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
@@ -33,7 +38,9 @@ server {
 	}
 
 	location / {
-		proxy_pass                          http://portfolio;
+		resolver 127.0.0.11 valid=30s;
+	    set $backend "http://portfolio";
+    	proxy_pass $backend;
 	}
 
 }
