--- a/web/conf.d/gw.trajano.net.conf
+++ b/web/conf.d/gw.trajano.net.conf
@@ -3,7 +3,7 @@ server {
     listen 443 ssl http2;
 
     location / {
-        proxy_pass http://noriko:3001;
+        proxy_pass http://192.168.1.113:3001;
         proxy_set_header   Host     $host;
     }
 }
