--- a/web/conf.d/ms.trajano.net.conf
+++ b/web/conf.d/ms.trajano.net.conf
@@ -3,6 +3,6 @@ server {
     listen 443 ssl http2;
 
     location / {
-        proxy_pass http://noriko:3000;
+        proxy_pass http://192.168.1.113:3000;
     }
 }
