--- a/web/conf.d/site.trajano.net.conf
+++ b/web/conf.d/site.trajano.net.conf
@@ -1,8 +1,9 @@
 server {
 	server_name site.trajano.net;
     listen 443 ssl http2;
-
-    location / {
-        proxy_pass http://site;
-    }
+	location / {
+		resolver 127.0.0.11 valid=30s;
+	    set $backend "http://site";
+    	proxy_pass $backend;
+	}
 }
