--- a/web/conf.d/trajano.net.conf
+++ b/web/conf.d/trajano.net.conf
@@ -29,7 +29,9 @@ server {
       	auth_basic_user_file /etc/nginx/conf.d/nginx.htpasswd;
 		add_header 'Docker-Distribution-Api-Version' 'registry/2.0' always;
 		client_max_body_size 600M;
-		proxy_pass                          http://registry:5000;
+		resolver 127.0.0.11 valid=30s;
+	    set $backend "http://registry:5000";
+		proxy_pass                          $backend;
 		proxy_set_header  Host              $http_host;   # required for docker client's sake
 		proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
 		proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
