--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 branches:
   only:
   - master
+  - release
   - "/^trajano-[\\d\\.]+$/"
 language: java
 jdk:
@@ -42,7 +43,7 @@ deploy:
     branch: master
 - provider: script
   skip_cleanup: true
-  script: printf 'scm.tag=%1s\nscm.url=scm:git:https://git@github.com/%2s.git' "${TRAVIS_TAG}"
-    "${TRAVIS_REPO_SLUG}" > release.properties && mvn release:perform
+  script: bash -e -x ./src/scripts/release.sh
   on:
-    tags: true
+    tags: false
+    branch: release
