--- a/web/conf.d/trajano.net.conf
+++ b/web/conf.d/trajano.net.conf
@@ -1,6 +1,6 @@
 server {
 	listen 80;
-	return 301 https://$host$request_uri;
+	return 301 https://trajano.net$request_uri;
 }
 server {
 	listen 80;
