--- a/web/conf.d/ssl.conf
+++ b/web/conf.d/ssl.conf
@@ -4,7 +4,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/trajano.net/privkey.pem;
     ssl_dhparam         /etc/letsencrypt/dhparam.pem;
     ssl_session_timeout  5m;
-    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+    ssl_protocols TLSv1.2;
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNULL:!eNULL:!LOW:!RC4:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS;
     add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains;';
@@ -14,5 +14,5 @@ server {
     # OCSP stapling
     ssl_stapling on;
     ssl_stapling_verify on;
-    resolver 8.8.8.8;
+    resolver 127.0.0.11;
 }
