--- a/web/conf.d/ssl.conf
+++ b/web/conf.d/ssl.conf
@@ -1,3 +1,8 @@
+# Turn off SSL session cache as it does not work behind a load balancer
+ssl_session_cache off;
+
+# ssl_session_cache shared:ssl_session_cache:2m;
+
 server {
     listen 443 ssl http2 default_server;
     ssl_certificate     /etc/letsencrypt/live/trajano.net/fullchain.pem;
@@ -6,10 +11,10 @@ server {
     ssl_session_timeout  5m;
     ssl_protocols TLSv1.2;
     ssl_prefer_server_ciphers on;
-    ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNULL:!eNULL:!LOW:!RC4:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS;
+    ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNULL:!eNULL:!LOW:!RC4:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS:!AES256-GCM-SHA384:!AES128-GCM-SHA256;
     add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains;';
+    # ssl_session_cache shared:TLS:2m;
 
-    ssl_session_cache shared:TLS:2m;
 
     # OCSP stapling
     ssl_stapling on;
