Use SSL Session Caching
However only allow one replica of the web so it will work.

--- a/web/conf.d/ssl.conf
+++ b/web/conf.d/ssl.conf
@@ -1,7 +1,4 @@
-# Turn off SSL session cache as it does not work behind a load balancer
-ssl_session_cache off;
-
-# ssl_session_cache shared:ssl_session_cache:2m;
+ssl_session_cache shared:ssl_session_cache:2m;
 
 server {
     listen 443 ssl http2 default_server;
@@ -13,8 +10,6 @@ server {
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNULL:!eNULL:!LOW:!RC4:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS:!AES256-GCM-SHA384:!AES128-GCM-SHA256;
     add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains;';
-    # ssl_session_cache shared:TLS:2m;
-
 
     # OCSP stapling
     ssl_stapling on;
