--- a/web/conf.d/site.trajano.net.conf
+++ b/web/conf.d/site.trajano.net.conf
@@ -5,5 +5,7 @@ server {
 		resolver 127.0.0.11 valid=30s;
 	    set $backend "http://site";
     	proxy_pass $backend;
+	    proxy_set_header Host            $host;
+	    proxy_set_header X-Forwarded-For $remote_addr;
 	}
 }
