--- a/wordpress-php/Dockerfile
+++ b/wordpress-php/Dockerfile
@@ -1,9 +1,10 @@
-FROM nginx:alpine
+# FROM nginx:alpine
+FROM php:fpm-alpine
 #FROM wordpress:php7.0-fpm-alpine
 #FROM wordpress:php7.1-apache
 #FROM php:apache
 #FROM boxedcode/alpine-nginx-php-fpm
 #ENV APACHE_DOCUMENT_ROOT /www
 #VOLUME /www
-COPY conf.d/* /etc/nginx/conf.d/
+RUN docker-php-ext-install mysqli
 VOLUME /var/www/html
