--- a/web/conf.d/trajano.net.conf
+++ b/web/conf.d/trajano.net.conf
@@ -41,6 +41,19 @@ server {
 
 	location / {
 		resolver 127.0.0.11 valid=30s;
+	    set $backend "http://portfolio";
+		proxy_set_header  Host              $http_host;   # required for docker client's sake
+		proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
+		proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
+		proxy_set_header  X-Forwarded-Proto $scheme;
+    	proxy_pass $backend;
+		proxy_intercept_errors on;
+		recursive_error_pages on;
+		error_page 404 = @wordpress-proxy;
+	}
+
+	location @wordpress-proxy {
+		resolver 127.0.0.11 valid=30s;
 	    set $backend "http://wordpress";
 		proxy_set_header  Host              $http_host;   # required for docker client's sake
 		proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
@@ -48,5 +61,4 @@ server {
 		proxy_set_header  X-Forwarded-Proto $scheme;
     	proxy_pass $backend;
 	}
-
 }
