--- a/wordpress/conf.d/default.conf
+++ b/wordpress/conf.d/default.conf
@@ -15,7 +15,6 @@ server {
         access_log off;
     }
 
-
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
@@ -23,6 +22,10 @@ server {
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
+    }
+
+    location ~ /\. {
+        deny all;
     }
 
     location ~ \.php$ {
