--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,10 @@ services:
     - portfolio
   wordpress:
     image: trajano.net/blog
+    deploy:
+      placement:
+        constraints:
+          - node.role != manager
     networks: 
     - default
     - wordpress
@@ -42,12 +46,20 @@ services:
     - wordpress:/var/www/html
   wordpress-php:
     image: trajano.net/blog-fpm
+    deploy:
+      placement:
+        constraints:
+          - node.role != manager
     networks: 
     - wordpress
     volumes:
     - wordpress:/var/www/html
   mysql:
     image: mysql:latest
+    deploy:
+      placement:
+        constraints:
+          - node.role != manager
     volumes:
     - wordpressdb:/var/lib/mysql:rw
     environment:
@@ -57,8 +69,8 @@ services:
     - MYSQL_RANDOM_ROOT_PASSWORD=yes
     networks: 
     - wordpress
-    ports:
-    - "3306:3306"
+#    ports:
+#    - "3306:3306"
   portfolio:
     image: trajano.net/portfolio
     deploy:
@@ -89,6 +101,19 @@ services:
         - node.hostname!=docker-engine
     volumes:
     - site:/site
+  dashboard:
+    image: charypar/swarm-dashboard
+    volumes:
+    - "/var/run/docker.sock:/var/run/docker.sock"
+    ports:
+    - 8080:8080
+    environment:
+      PORT: 8080
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
 #  gitlab:
 #    image: gitlab/gitlab-ce:latest
 #    deploy:
