Added robots.txt handling

--- a/site/default.conf
+++ b/site/default.conf
@@ -7,11 +7,14 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
     root   /site;
     index  index.html index.htm;
-    
+
+    location = /robots.txt {
+        alias /robots.txt;
+    }
+
     location = / {
         return 301 https://site.trajano.net/trajano/;
     }
-
 
     location / {
         try_files $uri $uri/ @github;
