--- a/web/conf.d/gzip.conf
+++ b/web/conf.d/gzip.conf
@@ -1,3 +1,4 @@
 gzip on;
 gzip_comp_level 9;
-gzip_types text/html application/javascript;
+#gzip_types text/html application/javascript;
+gzip_types application/javascript;
