Relocate hath to hath

--- a/hath/docker-compose.yml
+++ b/hath/docker-compose.yml
@@ -1,11 +1,11 @@
 #docker stack deploy -c docker-compose.yml --with-registry-auth trajano
-# docker-compose -f hath-compose.yml up -d --build
+# docker-compose up -d --build
 # docker service create --constraint node.hostname==docker-engine --publish published=12555,target=12555,mode=host --mount type=volume,source=noriko/s/hath,destination=/var/lib/hath,volume-driver=cifs trajano.net/hath
 # docker run --restart always --publish published=12555,target=12555,mode=host --mount type=volume,source=noriko/s/hath,destination=/var/lib/hath,volume-driver=cifs trajano.net/hath
 version: '3.4'
 services:
   hath:
-    build: ./hath
+    build: .
     image: trajano.net/hath
     restart: always
     network_mode: host
