got dashboard working

--- a/intranet/conf.d/default.conf
+++ b/intranet/conf.d/default.conf
@@ -34,11 +34,15 @@ server {
     ssl_stapling_verify on;
     resolver 127.0.0.11;
 
-    location /swarm {
-	    resolver 127.0.0.11 valid=30s;
-	    set $backend "https://dashboard:8080";
-    	proxy_pass $backend;
-	    proxy_set_header Host            $host;
-	    proxy_set_header X-Forwarded-For $remote_addr; 
+    location /swarm/ {
+        rewrite ^/swarm/(.*) /$1  break;
+        proxy_pass http://dashboard:8080/$uri$is_args$args;
+    }
+
+    location /stream {
+        proxy_pass http://dashboard:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
     }
 }
