--- a/web/conf.d/i.trajano.net.conf
+++ b/web/conf.d/i.trajano.net.conf
@@ -1,3 +1,7 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
 server {
 	server_name i.trajano.net;
     listen 443 ssl http2;
@@ -8,5 +12,7 @@ server {
     	proxy_pass $backend;
 	    proxy_set_header Host            $host;
 	    proxy_set_header X-Forwarded-For $remote_addr;
-	}
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+    }
 }
