--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 #docker stack deploy -c docker-compose.yml --with-registry-auth trajano
+#docker run -v noriko/s/letsencrypt:/etc/letsencrypt --volume-driver cifs trajano.net/web
 version: '3.4'
 services:
    # 4/kZkxXSsPXu7XlzItajkniSMhlptkhIjLVKJe7Aj+WjvbS35sdkEzjld8eqpO5c:$apr1$nAlpgWWz$m1r3URBT9dfTWr2sfZ24f.
@@ -24,7 +25,7 @@ services:
         - node.hostname==docker-engine
     ports:
     - "80:80"
-    - "443:443"
+    - "443:444"
     volumes:
     - letsencrypt:/etc/letsencrypt
     environment:
@@ -32,6 +33,14 @@ services:
     - HTTPVAL=true
   intranet:
     image: trajano.net/intranet
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: any
+        delay: 10s
+      placement:
+        constraints:
+        - node.hostname!=docker-engine
     volumes:
     - letsencrypt:/etc/letsencrypt
     environment:
