--- a/intranet/conf.d/default.conf
+++ b/intranet/conf.d/default.conf
@@ -29,6 +29,9 @@ server {
     ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNULL:!eNULL:!LOW:!RC4:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS:!AES256-GCM-SHA384:!AES128-GCM-SHA256;
     add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains;';
 
+    ssl_client_certificate /etc/nginx/ca-cert-trajano.pem;
+    ssl_verify_client on;
+
     # OCSP stapling
     ssl_stapling on;
     ssl_stapling_verify on;
