Used unix streams rather than 444

--- a/web/conf.d/site.trajano.net.conf
+++ b/web/conf.d/site.trajano.net.conf
@@ -1,6 +1,6 @@
 server {
 	server_name site.trajano.net;
-    listen 444 ssl http2;
+    listen unix:/var/run/nginx.sock ssl http2;
 	location / {
 		resolver 127.0.0.11 valid=30s;
 	    set $backend "http://site";
