--- a/web/conf.d/ssl.conf
+++ b/web/conf.d/ssl.conf
@@ -1,7 +1,7 @@
 ssl_session_cache shared:ssl_session_cache:2m;
 
 server {
-    listen 444 ssl http2 default_server;
+    listen unix:/var/run/nginx.sock ssl http2 default_server;
     ssl_certificate     /etc/letsencrypt/live/trajano.net/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/trajano.net/privkey.pem;
     ssl_dhparam         /etc/letsencrypt/dhparam.pem;
