--- a/web/conf.d/trajano.net.conf
+++ b/web/conf.d/trajano.net.conf
@@ -13,13 +13,13 @@ server {
 	return 301 https://trajano.net$request_uri;
 }
 server {
-    listen 444 ssl http2;
+    listen unix:/var/run/nginx.sock ssl http2;
 	server_name www.trajano.net;
 	return 301 https://trajano.net$request_uri;
 }
 server {
 	server_name trajano.net;
-    listen 444 ssl http2;
+    listen unix:/var/run/nginx.sock ssl http2;
 
 	location /v2/ {
 		if ($http_user_agent ~ "^(docker\/1\.(3|4|5(?!\.[0-9]-dev))|Go ).*$" ) {
